# claude-git-bridge

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP_INSTRUCTIONS.md  bluesky-access-2.skill  credential-proxy-spec.md  pyproject.toml  requirements.txt
.github/scripts/: release-skill.sh
.github/workflows/: release-skill.yml
client/: git_client.py
docs/: CLAUDE_AI_TESTING.md  LAUNCHAGENT_SETUP.md  TAILSCALE_SETUP.md
examples/: basic_usage.py  claude_self_improvement.py
files-from-claude-chat/: api-credential-patterns.md  claude_project_self_improvement.py  git-proxy-complete-guide.md  git_proxy_client.py
mcp/: README.md  server.py
scripts/: build_skill.sh  setup-launchagents.sh  setup.sh  start_server.sh
server/: credentials.example.json  credentials.py  proxy.py  proxy_server.py  sessions.py
skill-package/git-proxy/: SKILL.md  git_client.py
skills/bluesky-access/: CHANGELOG.md  SKILL.md
skills/bluesky-access/scripts/: get_profile.py  search_posts.py
skills/git-proxy/: CHANGELOG.md  git_client.py
skills/sift/: CHANGELOG.md  SKILL.md
