[project]
name = "claude-credential-proxy"
version = "2.0.0"
description = "Credential proxy and git bundle server for Claude.ai"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Flask server
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    # MCP server
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
